# type_map

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  type_map.cppm
.github/workflows/: test.yml
.github/workflows/scripts/: CMakeUserPresets.json
test/: CMakeLists.txt  iota_map.cpp  type_map.cpp
